@@ -5,6 +5,7 @@ ChnageLog
     * fix update file structure
     * add commands DELETE_FILE,DELETE_DIRECTORY,CREATE_DIRECTORY
     * add error.ErrorState - chained error state infrastructure
+    * rename metadata.*filaname to metadata.*path where appropriate
 
 0.2.0 (2020-12-14)
 
